--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <style> 
     body {font-size: 24px; font-family: Helvetica;}
     #help img, #qrcode img {margin-top:10px; height: 20px;}
-    h2 {margin:0 0 5px 0;}
+    h2 {margin:0 0 8px 0;}
     .l {float: left;}
     .r {float: right;}
-    .a {font-size: 12px; margin-bottom: 10px; display: block;}
+    .a {font-size: 16px; margin-bottom: 14px; display: block;}
+    #date,  #dollar, #fbp {text-decoration: none; color: #005999;} /* #551A8B; */
     #vp {display:block; font-size: 12px; color: gray;}
     #container {display: block; max-width: 480px;}
     .warn {background-color: #e9dbf5;} /* #efe4f7; #E6E6FA;}*/
@@ -49,14 +50,13 @@
     #price, #prem {margin-top: 5px;}
     #price.warning, #prem.warning {color:red;}
     #prem-hd {float:left; margin-left:150px; font-size:24px; font-weight:bold;}
-/*    #premium, #qrcode          {background-color: white; border-radius:50%;font-size: 12px; margin:15px 0 0 40px; width:12px; height:12px; float: left; border:1px solid black; cursor:default;}*/
-    #premium                   {background-color: white; border-radius:50%;font-size: 12px; margin:15px 0 0 40px; width:12px; height:12px; float: left; border:1px solid black; cursor:default;}
-    #premium.toggled           {background-color: #FFD700;}
-    #gold.toggled              {background-color: #FFEA00;}
+    #premium         {background-color: white; border-radius:50%;font-size: 12px; margin:15px 0 0 40px; 
+                      width:12px; height:12px; float: left; border:1px solid black; cursor:default;}
+    #premium.toggled {background-color: #FFD700;}
+    #gold.toggled    {background-color: #FFEA00;}
     #rnd.toggled, #ken.toggled, #prm.toggled {background-color: #F8C8DC;}
     #rnd,         #ken,         #prm         {background-color: #F0F0F0;}
-    #fbp, #date,  #dollar      {font-size: 12px; text-decoration: none; color:#551A8B;}
-    #nick {border-radius:50%; border:1px solid #888; cursor: default; padding:5px; /*margin-right:30px;*/}
+    #nick {border-radius:50%; border:1px solid #888; cursor: default; padding:5px;}
     #nick.toggled {background-color: #F8C8DC;}
     #lst {display:block; width:435px;}
     #tbl {margin: auto;}
@@ -82,6 +82,7 @@
       #hide {display:none;}
       #premium {width:16px; height:16px;}
     }
+  /* https://www.w3schools.com/colors/colors_picker.asp */
   </style>
 </head>
 <body><div id="container">
