--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     @media only screen and (max-width: 500px) {
       #hide {display:none;}
       #premium {width:16px; height:16px;}
+      body, input[type="text"], input[type=button] {font-size: 20px;}
     }
   /* https://www.w3schools.com/colors/colors_picker.asp */
   </style>
