--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     @media only screen and (max-width: 500px) {
       #hide {display:none;}
       #premium {width:16px; height:16px;}
-      body, input {font-size: 20px;}
+      /* body, input {font-size: 20px;} */
     }
   /* https://www.w3schools.com/colors/colors_picker.asp */
   </style>
