--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     td:nth-child(7)    {text-align: right; padding: 0 5px;}
     #bag {
       background-image: url("cover.jpg");
-      background-size: 100% 100%;
+/*      background-size: 100% 100%;*/
+      background-size: contain;
+      background-repeat: no-repeat;
       background-color: rgba(255,255,255,0.6);
       background-blend-mode: lighten;
       margin: auto;
