--- a/help.html
+++ b/help.html
@@ -74,43 +74,13 @@ span {margin-bottom: 8px; display: block;}
 <span>Notice the price of a monster box of American Silver Eagles and enter it into the "Price" input field (7). For me that was 14678.25</span>
 <span>It then displays 25.6% in the "Prem" field (8). That's a good price for an American Silver Eagle sovereign coin. In April of '23 the premium was more than double that!</span></p>
 
-<p><b>Fun Fact:</b> A $1.40 face of "junk" silver is 1 troy oz of silver.</p>
+<p><span><b>Fun Facts:</b> A $1.40 face of "junk" silver is 1 troy oz of silver (or exactly 1/.715 = 1.3986).</span>
+<span>When the spot price of silver is $28 (or exactly 20/.715 = 27.972) a "junk" quarter will be worth $5 and a dime will be worth $2. Then the "fiat" US dollar will become the new "junk" <a href="http://bit.ly/3S7Sep3" target="_blank">nickel</a>, worth half as much as a dime!
+</span></p>
 
+<!--
+https://www.dropbox.com/scl/fi/k6romka4ei9ga31tu0rqz/junk_nickel.jpg?rlkey=01t38b6ds6pv6288djwyvyq5p&raw=1
+http://bit.ly/3S7Sep3
+-->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--pre><b><font color=blue>User</font></b>
-why do some people think bitcoin has value when it is not backed by something like gold?
-
-<b><font color=blue>ChatGPT</font></b>
-That's a great question! The value of any currency, whether it's traditional like the dollar or digital like Bitcoin, is often tied to a few key factors. While gold-backed currencies were prevalent in the past, today's currencies, including Bitcoin, derive value through different mechanisms:
-
-<b>Scarcity:</b> Like gold, Bitcoin has a limited supply. There will only ever be 21 million bitcoins in existence, making it a scarce resource. This scarcity can contribute to its perceived value, as scarcity often increases demand.
-
-<b>Utility and Functionality:</b> Bitcoin operates on a decentralized network using blockchain technology. Its utility lies in its ability to facilitate secure, peer-to-peer transactions without the need for intermediaries like banks. People find value in this digital currency for its utility in transferring wealth and making transactions across borders.
-
-<b>Trust and Perception:</b> The value of any currency, including traditional ones, is partly based on trust and perception. If people believe in its value and accept it as a form of payment, it gains value. Over time, Bitcoin has gained trust and acceptance from various individuals, institutions, and even governments, contributing to its perceived value.
-
-<b>Network Effect:</b> As more people adopt Bitcoin and it becomes more widely accepted, its value tends to increase. This network effect is similar to how social networks gain value as more users join.
-
-<b>Speculation and Investment:</b> Like any asset, Bitcoin's value can also be influenced by speculation and investment. Some people buy and hold Bitcoin as an investment, hoping its value will increase over time due to its scarcity and increasing adoption.
-
-While it's not backed by a physical asset like gold, Bitcoin's value is derived from a combination of these factors. Its decentralized nature, scarcity, technological innovation, and growing acceptance have contributed to its perceived value, even though it lacks the backing of a tangible asset like gold.</body></html></pre-->
-	
 </div></body></html>
