--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       #prem    {width: 65px;}
       #price   {width: 85px;}
       body, input {font-size: 20px;} 
+      .nick {width:28px; height:28px;
     }
   /* https://www.w3schools.com/colors/colors_picker.asp */
   </style>
