--- a/index.html
+++ b/index.html
@@ -27,33 +27,27 @@
     .nick,
     button {background-color: #E6E6FA; font-size:24px; border-radius: 6px; border-width: 1px;}
     button {min-width: 32px;}
-    .nick {
-      width:30px; 
-      height:30px; 
-      display: inline-block; 
+    .nick, #nick {
       border: 1px solid #888; 
-      cursor: default;}
+      cursor: default;
+      display: inline-block; 
+      height:30px; 
+      width:30px;
+    }
     #nick {
       border-radius: 50%; 
       padding: 1px;
-      border:1px solid #888; 
-      cursor: default; 
       margin: 0 10px; 
-      display: inline-block; 
-      width:30px; 
-      height:30px;
-      /*transform: translateY(-2px); display: inline-block; padding:5px; */
     }
     #nick.toggled {background-color: #F8C8DC;}
-    td[colspan="7"]    {text-align: center;}
-    td:nth-child(2)    {min-width: 34px;}
-    td:nth-child(5)    {min-width: 62px;}
+    td[colspan="7"] {text-align: center;}
+    td:nth-child(2) {min-width: 34px;}
+    td:nth-child(5) {min-width: 62px;}
     td:nth-child(2),
     td:nth-child(5),
-    td:nth-child(7)    {text-align: right; padding: 0 5px;}
+    td:nth-child(7) {text-align: right; padding: 0 5px;}
     #bag {
       background-image: url("cover.jpg");
-/*      background-size: 100% 100%;*/
       background-size: contain;
       background-repeat: no-repeat;
       background-color: rgba(255,255,255,0.6);
@@ -66,9 +60,9 @@
     #face_total, #troy_ounce, #grand_total {padding: 0 5px;}
     #price, #prem {margin-top: 5px;}
     #price.warning, #prem.warning {color:red;}
-    #prem-hd {float:left; margin-left:150px; font-size:24px; font-weight:bold;}
-    #premium         {background-color: white; border-radius:50%;font-size: 12px; margin:12px 2px 0 2px; /*float: left;*/
-                      width:12px; height:12px; border:1px solid black; cursor:default;}
+    #prem-hd {float:left; margin-left:150px; font-size:24px; font-weight: bold;}
+    #premium {background-color: white; border-radius:50%; border:1px solid black;
+              font-size: 12px; width:12px; height:12px; margin:12px 2px 0 2px; cursor:default;}
     #premium.toggled {background-color: #FFD700;}
     #gold.toggled    {background-color: #FFEA00;}
     #rnd.toggled, #ken.toggled, #prm.toggled {background-color: #F8C8DC;}
@@ -340,9 +334,10 @@ silver.onchange = function(event){
   event.target.blur();
 };
 
-function render(){ console.trace();
+function render(sign){ console.trace();
+  let nickel = sign !== undefined ? sign * db.dime.price * .5 : 0;
   spot = parseFloat(silver.value);
-  amt  = parseFloat(buy.value);
+  amt  = parseFloat(buy.value) + nickel;
 
  // db.nick.count  = Math.floor(amt / (spot * troy * .05));
 
@@ -355,6 +350,7 @@ function render(){ console.trace();
   }
 
   db.nick.count  = Math.floor((amt - db.dolr.count * spot) / (spot * troy * .05));
+  // db.nick.count += sign !== undefined ? sign : 0;
 
   if(db.dolr.count > 0 && db.nick.count < 4 && db.nick.count % 2 != 0){
      db.dolr.count -= 1;
@@ -377,6 +373,7 @@ function render(){ console.trace();
   }
 
   document.querySelectorAll('.coin').forEach(e => fn(e));
+  return false;
 };
 
 let e = document.querySelectorAll("button");
@@ -386,10 +383,12 @@ for(let i = 0; i < e.length; i++){
       let e = document.getElementsByClassName("face"), n = 0;
       for(let i = 0; i < e.length; i++){
         n += parseFloat(e[i].textContent * db[e[i].id]["fract"]);
+        console.log(`${e[i].textContent} * ${db[e[i].id]["fract"]}`);
       } 
       face.innerHTML = (n - db.dolr.count * (db.dolr.fract -1)).toFixed(2);     
       ozt.innerHTML = (n * troy).toFixed(2);  
-      buy.value = (nickel_count() * spot * troy * .05 + .01).toFixed(2);
+      buy.value = (nickel_count() * spot * troy * .05 + .005).toFixed(2);
+      console.log(i, buy.value);
     }
   });
 };
@@ -418,19 +417,35 @@ function fn(e){
   console.log(`key= ${key}`,db[key]);
 
   grand.innerHTML  = Object.values(db).reduce((grand, {total}) => grand + parseFloat(total), 0).toFixed(2);
-  let n = amt / (spot * troy); // face based on buy value
+  let n = amt / (spot * troy);
   face.innerHTML = (n - db.dolr.count * (db.dolr.fract - 1)).toFixed(2); // adjust for rounds
-//face.innerHTML = (n).toFixed(2);
   ozt.innerHTML = (n * troy).toFixed(2);
-  // offsetCenter();
   return true;
 }
 
-// function offsetCenter(){
-//   let gap = ozt.parentElement.parentElement.offsetWidth - (face.parentElement.offsetWidth + ozt.parentElement.offsetWidth + grand.parentElement.offsetWidth);
-//   ozt.parentElement.style.marginLeft = `${Math.floor(gap/2)}px`;
-//   // console.log(gap);
-// }
+let els = document.getElementsByClassName("nick");
+[].forEach.call(els, function (nick) {
+  nick.addEventListener('click', function (event) {
+    // if(event.target.classList.contains('toggled')){
+    // // buy.value = ((nickel_count() - 1) * spot * troy * .05 + .01).toFixed(2);
+    //    buy.value -= spot * troy * .05 + .01;
+    // }else{
+    // // buy.value = ((nickel_count() + 1) * spot * troy * .05 + .01).toFixed(2);
+    //    buy.value += spot * troy * .05 + .01;
+    // }
+    let sign  = event.target.classList.contains('toggled') ? -1 : 1;
+    // let amt   = parseFloat(buy.value);
+    // buy.value = ((nickel_count() + sign) * spot * troy * .05 + .01).toFixed(2);
+
+    event.target.blur();
+    render(sign);
+    grand.innerHTML  = Object.values(db).reduce((grand, {total}) => grand + parseFloat(total), 0).toFixed(2);
+    let n = amt / (spot * troy);
+    face.innerHTML = (n - db.dolr.count * (db.dolr.fract - 1)).toFixed(2); // adjust for rounds
+    ozt.innerHTML = (n * troy).toFixed(2);
+    buy.value = (nickel_count() * spot * troy * .05 + .005).toFixed(2);
+  });
+});
 
 function clrPrem(flag){
     pric.className = '';
@@ -460,7 +475,6 @@ premium.addEventListener('click', function (event) {
 });
 
 rnd.addEventListener('click', function (event) {
-  // event.target.className = 'toggled' == event.target.className ? '' : 'toggled';
   if(event.target.className == 'toggled'){
     event.target.className = '';
     localStorage.removeItem(event.target.value);
@@ -468,12 +482,10 @@ rnd.addEventListener('click', function (event) {
     event.target.className = 'toggled';
     localStorage.setItem(event.target.value, 'toggled');
   }
-  // buy.value = (nickel_count() * spot * troy * .05 + .01).toFixed(2);
   render();
 });
 
 ken.addEventListener('click', function (event) {
-  // event.target.className = 'toggled' == event.target.className ? '' : 'toggled';
   if(event.target.className == 'toggled'){
     event.target.className = '';
     localStorage.removeItem(event.target.value);
@@ -481,13 +493,12 @@ ken.addEventListener('click', function (event) {
     event.target.className = 'toggled';
     localStorage.setItem(event.target.value, 'toggled');
   }
-  // buy.value = (nickel_count() * spot * troy * .05 + .01).toFixed(2);
   render();
 });
 
 prm.addEventListener('click', function (event) {
-  event.target.className = 'toggled' == event.target.className ? '' : 'toggled';
-  lst.style.display = event.target.className == 'toggled' ? 'none' : 'block';
+  event.target.className = event.target.className == 'toggled' ? '' : 'toggled';
+  lst.style.display      = event.target.className == 'toggled' ? 'none' : 'block';
   render();
 });
 
@@ -496,30 +507,6 @@ function setSpot(){
   render();
 }
 
-let els = document.getElementsByClassName("nick");
-[].forEach.call(els, function (nick) {
-  nick.addEventListener('click', function (event) {
-    if(event.target.classList.contains('toggled')){
-       buy.value = ((nickel_count() - 1) * spot * troy * .05 + .01).toFixed(2);
-    }else{
-       buy.value = ((nickel_count() + 1) * spot * troy * .05 + .01).toFixed(2);
-    }
-    event.target.blur();
-    render();
-  });
-});
-
-// nick.addEventListener('click', function (event) {
-//   if(nick.className == 'toggled'){
-//      nick.className = '';
-//      buy.value = ((nickel_count() - 1) * spot * troy * .05 + .01).toFixed(2);
-//   }else{
-//      nick.className = 'toggled';
-//      buy.value = ((nickel_count() + 1) * spot * troy * .05 + .01).toFixed(2);
-//   }
-//   nick.blur();
-//   render();
-// });
 document.getElementById("vp").innerHTML = window.innerWidth;
 
 let modal = document.getElementById('id01');
